test/Dialect/ZKIR/structs_fail_05.zkir
// RUN: zkir-opt %s --split-input-file --verify-diagnostics

// expected-error@+1 {{'zkir.struct' op must define exactly one 'constrain' function}}
zkir.struct @ComponentD<[@B, @D, @C]> {
  func.func public @compute(%a: !zkir.felt, %b: !zkir.felt) {
    return
  }
}
